[package]
name = "websocket_server_rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["handshake"]
"handshake" = ["http"]

[dependencies]
http = { version = "0.2", optional = true }
thiserror = "1.0.23"

base64 = "0.13.0"
hex = "0.4.2"
httparse = "1.3.4"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"